# aws-inventory-extractor

./: .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  __init__.py  extract_inventory.sh  run_script.sh
python/: Dockerfile  __init__.py  app.py  configure_aws.sh  requirements.txt  terraform_app.py
python/modules/: acm.py  asg.py  cloudfront.py  common.py  db.py  dynamodb.py  ec2.py  eks.py  elasticache.py  elb.py  iamrole.py  kms.py  lamda.py  msk.py  nacl.py  opensearch.py  route53.py  s3.py  secrets_manager.py  ses.py  sg.py  sg_centric_rules.py  sg_detail.py  sg_resource_mapper.py  sg_summary.py  sns.py  sqs.py  subnet.py  tg.py  vpc.py
python/output/: aws_ec2_inventory_20250704_163335.xlsx
python/pre_processor/: Dockerfile  __init__.py  configure_aws_steampipe.sh
python/raw_data/: Dockerfile  __init__.py  pyproject.toml
python/templates/: index.html
