[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-inventory-extractor"
version = "1.0.2"
description = "HanwhaVision CloudOps Team AWS Resource Extraction Automation Tool"
authors = [{
    name = "Jaeho Park",
    email = "jaeho.p@hanwha.com"
},{
    name = "Hongil Kim",
    email = "hongil.kim@bespinglobal.com"
}
]
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.7, <4"

dependencies = [
    "et_xmlfile==2.0.0",
    "greenlet==3.1.1",
    "numpy==2.1.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2==2.9.10",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "six==1.16.0",
    "SQLAlchemy==2.0.36",
    "tqdm==4.66.5",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "XlsxWriter==3.2.0",
]
